Refactored configuration generators.
Separated UI and core functionalities.
Used common interface for all configuration generators.